fix: increase line selection width for bettere visibility

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1734,7 +1734,7 @@ $sidebar-linklist-link-v-padding: 0.75rem;
 $sidebar-link-small-line-width: 65px;
 $sidebar-link-size: 1rem;
 $sidebar-dropdown-icon-size: 1.5rem;
-$sidebar-dropdown-line-selection-width: 2px;
+$sidebar-dropdown-line-selection-width: 4px;
 $sidebar-dropdown-line-selection-color: $primary !default;
 $sidebar-submenu-font-size: 1rem;
 $sidebar-submenu-link-v-padding: 0.45em;
